<input> with autofocus doesn't lose focus when it has a certain onblur listener https://bugs.webkit.org/show_bug.cgi?id=68513

Patch by Rakesh KN <rakesh.kn@motorola.com> on 2011-09-27
Reviewed by Kent Tamura.

Source/WebCore:

Test: fast/forms/autofocus-focus-only-once.html

These changes make sure that an element is focused only once when autofocus attribute is used.

* html/HTMLFormControlElement.cpp:
(WebCore::HTMLFormControlElement::HTMLFormControlElement):
(WebCore::shouldAutofocus):
(WebCore::HTMLFormControlElement::attach):
* html/HTMLFormControlElement.h:
(WebCore::HTMLFormControlElement::hasAutofocused):
(WebCore::HTMLFormControlElement::setAutofocused):

LayoutTests:

These changes make sure that an element is focused only once when autofocus attribute is used.

* fast/forms/autofocus-focus-only-once-expected.txt: Added.
* fast/forms/autofocus-focus-only-once.html: Added.

Canonical link: https://commits.webkit.org/84851@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96078 268f45cc-cd09-0410-ab3c-d52691b4dbfc